--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,21 @@ readme = "README.md"
 license = "MIT"
 keywords = ["cli", "productivity", "terminal", "tracking", "developer-tools"]
 categories = ["command-line-utilities", "development-tools"]
+repository = "https://github.com/ricky-ultimate/opstrail"
+homepage = "https://github.com/ricky-ultimate/opstrail"
 
 [dependencies]
-clap = { version = "4", features = ["derive"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-chrono = { version = "0.4", features = ["serde"] }
-dirs = "5"
-colored = "2"
-anyhow = "1"
-thiserror = "1"
+clap = { version = "4.5.51", features = ["derive"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+chrono = { version = "0.4.42", features = ["serde"] }
+dirs = "6"
+colored = "3"
+anyhow = "1.0.100"
+thiserror = "2.0.17"
 
 [dev-dependencies]
-tempfile = "3"
+tempfile = "3.23.0"
 
 [[bin]]
 name = "trail"
